# dismantle

./: .editorconfig  .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.rst  changelog.html  command.html  contributing.html  dismantle.extension.html  dismantle.html  dismantle.index.html  dismantle.package.html  dismantle.plugin.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: CODEOWNERS
.github/workflows/: ci_cd.yml  codeql-analysis.yml  on_dispatch.yaml  on_publish.yaml  on_pull_request.yaml  publish.yml
@scope-one/: package-one.tgz
_modules/: index.html
_modules/dismantle/: cli.html
_modules/dismantle/extension/: extensions.html  iextension.html
_modules/dismantle/index/: _handlers.html
_modules/dismantle/package/: _formats.html  _handlers.html
_modules/dismantle/plugin/: iplugin.html  plugin.html  plugins.html  register.html
_sources/: dismantle.extension.rst.txt  dismantle.package.rst.txt  index.md.txt  modules.rst.txt
docs/src/: 404.rst  command.rst  conf.py  dismantle.index.rst  dismantle.plugin.rst  dismantle.rst  index.md
src/dismantle/: __init__.py  __version__.py  cli.py  utils.py
src/dismantle/extension/: __init__.py  extensions.py  iextension.py
src/dismantle/index/: __init__.py  _handlers.py
src/dismantle/package/: __init__.py  _formats.py  _handlers.py
src/dismantle/plugin/: __init__.py  iplugin.py  plugin.py  plugins.py  register.py
tests/: ColorExtension.py  GreetingExtension.py  __init__.py  binary_extensions_test.py  conftest.py  cov.xml  dismantle_test.py  extensions_test.py  format_directory_test.py  format_tar_test.py  format_tgz_test.py  format_zip_test.py  index_jsonfile_test.py  index_jsonurl_test.py  package_http_test.py  package_local_test.py  test_dismantle.py
tests/data/binary_extensions_test/: GreetingExtension.py  index_in_sys_modules.json
tests/data/binary_extensions_test/@scope-five/package-one/extensions/: carbon.py
tests/data/binary_extensions_test/@scope-four/package-one/: package.json
tests/data/binary_extensions_test/@scope-four/package-one/extensions/: broken.py
tests/data/binary_extensions_test/@scope-one/package-one/extensions/: green.py  hello.py
tests/data/binary_extensions_test/@scope-one/package-three/: package.json
tests/data/binary_extensions_test/@scope-one/package-three/extensions/: blue.py  goodbye.py
tests/data/binary_extensions_test/@scope-one/package-two/extensions/: red.py
tests/data/binary_extensions_test/@scope-three/package-one/: package.json
tests/data/dismantle_test/@scope-one/package-one/: package.json
tests/data/dismantle_test/@scope-one/package-one/extensions/: green.py  hello.py
tests/data/dismantle_test/@scope-one/package-two/: package.json
tests/data/dismantle_test/@scope-one/package-two/extensions/: afternoon.py
tests/data/dismantle_test/@scope-two/package-one/: package.json
tests/data/extensions_test/: ColorExtension.py
tests/data/extensions_test/@scope-five/package-one/: package.json
tests/data/extensions_test/@scope-five/package-one/extensions/: carbon.py
tests/data/extensions_test/@scope-one/package-three/extensions/: blue.py
tests/data/extensions_test/@scope-one/package-two/extensions/: afternoon.py  red.py
tests/data/extensions_test/@scope-two/package-two/: package.json
tests/data/format_tar_test/directory_src/: package.json
tests/data/index_jsonfile_test/: index_broken.json  index_populated.json
tests/data/package_http_test/: package.tar
tests/data/package_http_test/@scope-one/package-four/: package.json
tests/data/package_local_test/@scope-one/package-three/: package.json
