[tool.poetry]
name = "dismantle"
version = "0.1.0"
description = "Python package / plugin / extension manager"
authors = ["Gary Stidston-Broadbent <dismantle@garysb.com>"]
license = "Apache License, Version 2.0"
readme = "README.rst"
homepage = "https://garysb.com"
include = [ "LICENSE", "NOTICE", "README.rst", "docs", "tests"]
packages = [ { include = "dismantle", from = "src" } ]
classifiers = [
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
