[project]
name = "dismantle"
dynamic = ["version"]
description = "Python package / plugin / extension manager."
authors = [{ name = "Area28 Technologies", email = "dev@area28.io" }]
dependencies = ["requests>=2.27.1"]
requires-python = ">=3.7"
license = { text = "SEE LICENSE IN LICENSE" }
readme = "README.md"
keywords = [
    "packaging",
    "dependency",
    "extension",
    "plugin",
    "module",
    "version"
]
classifiers = [
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[project.scripts]
dismantle = "dismantle.cli:main"

[project.optional-dependencies]

[tool.pdm.scripts]
lint = { cmd = "flake8 src tests" }
test = { cmd = "pytest tests" }
pre_document = { cmd = "sphinx-apidoc -f -o docs/src src/dismantle/" }
document = { cmd = "sphinx-build docs/src docs/build" }
pre_coverage = { cmd = "pytest tests -qq --cov=dismantle --cov-report=xml" }
coverage = { cmd = "coverage report" }

[tool.flake8]
max-line-length = 79
max-doc-length = 72
max-complexity = 7
docstring-convention = "pep257"
show-source = true
per-file-ignores = """
    tests/*_test.py: S101, D103, S303, S324
    tests/data/*: D100, D101, D102
    src/dismantle/extension/extensions.py: B020
    src/dismantle/index/_handlers.py: S303, S324
    src/dismantle/package/_handlers.py: S303, S324
"""
exclude = [
    ".git",
    ".github",
    "__pycache__",
    "docs",
    "build",
    "dist",
    ".pytest_cache",
    "htmlcov"
]

[tool.pylint."MESSAGES CONTROL"]
enable = "all"

[tool.isort]
line_length = 79
include_trailing_comma = false
multi_line_output = 3
color_output = true
src_paths = ["src/dismantle", "tests"]

[tool.pydocstyle]
convention = "pep257"

[tool.coverage.run]
source = ["src"]

[tool.sphinx-pyproject]
github_username = "area28technologies"
github_repository = "dismantle"
author = "Area28 Technologies"
project = "dismantle"
copyright = "2022 Area28 Technologies"
language = "en"
master_doc = "index"
display_github = true
html_theme = "furo"
html_theme_options = { sidebar_hide_name = true, announcement = "<em>RELEASE</em> version v1.0.0 released!", light_logo = "assets/logo-light.svg", dark_logo = "assets/logo-dark.svg", light_css_variables = { color-brand-primary = "#1F1B53", color-brand-content = "#1F1B53" } }
package_root = "src/dismantle"
html_static_path = ["_static"]
extensions = [
    "myst_parser",
    "sphinx.ext.napoleon",
    "sphinxarg.ext",
    "sphinx.ext.viewcode",
    "sphinx.ext.autodoc"
]
myst_enable_extensions = [
    "amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "fieldlist",
    "html_admonition",
    "html_image",
    "replacements",
    "smartquotes",
    "strikethrough",
    "substitution",
    "tasklist"
]

[tool.pdm]
version = { from = "src/dismantle/__version__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-httpserver>=1.0.4"]
document = [
    "Sphinx>=4.5.0",
    "myst-parser>=0.17.2",
    "sphinx-pyproject>=0.1.0",
    "sphinx-argparse>=0.3.1",
    "invocations>=2.6.0",
    "furo>=2022.4.7"
]
lint = [
    "flake9>=3.8.3.post2",
    "flake8-isort>=4.1.1",
    "flake8-bugbear>=22.4.25",
    "flake8-docstrings>=1.6.0",
    "flake8-bandit>=3.0.0",
    "flake8-pytest-style>=1.6.0",
    "flake8-quotes>=3.3.1",
    "flake8-pytest>=1.3",
    "flake8-use-fstring>=1.3",
    "pep8-naming>=0.11.1",
    "gitlint>=0.17.0",
    "setuptools>=62.2.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
